--- a/lab1/index.html
+++ b/lab1/index.html
@@ -3,41 +3,51 @@
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Language" content="pl" />
-<meta name="Author" content="Jan Kowalski" />
+<meta name="Author" content="Dawid Grabowski" />
 <link rel="stylesheet" href="pliki/mystyle.css">
-<title>Filmy oscarowe</title>
+<title>Filmy Oscarowe</title>
 </head>
+
 <body>
 <ul>
-	<li><a class="active" href="index.html">Home</a></li>
-	<li><a href="pliki/kontakt.html">Kontakt</a></li>
-	<li><a href="pliki/najlepszefilmy.html">Najlepsze filmy</a></li>
+    <b><li><a class="active" href="index.html">Home</a></li>
+    <li><a href="pliki/kontakt.html">Kontakt</a></li></a></li></b>
 </ul>
 
-<h1>Filmy Oscarowe</h1>
-<div><p><a href="pliki/wszystkowszedzienaraz.html">Wszystko wszędzie naraz</a></p>
-<p><br>Najlepszy film</p>
-<img src="pliki/wszystkowszedzienaraz.jpg" alt="Wszystko wszędzie naraz plakat"></div>
+<br><h1>Filmy Oscarowe</h1>
 
-<div><p><a href="pliki/womentalking.html">Women Talking</a></p>
-<p><br>Najlepszy scenariusz adaptowany</p>
-<img src="pliki/womentalking.jpg" alt="Women Talking plakat"></div>
+<table>
+    <tr>
+        <td>
+            <p><a href="pliki/wszystkowszedzienaraz.html"><i>Wszystko wszędzie naraz</i></a></p>
+			<p><br>Najlepszy film</p>
+			<a href="pliki/wszystkowszedzienaraz.html"><img src="pliki/wszystkowszedzienaraz.jpg" class="img1" alt="Wszystko wszędzie naraz plakat"></a>
+        </td>
+	</tr>	
+	<tr>
+        <td>
+            <p><a href="pliki/womentalking.html"><i>Women Talking</i></a></p>
+			<p><br>Najlepszy scenariusz adaptowany</p>
+			<a href="pliki/womentalking.html"><img src="pliki/womentalking.jpg" class="img1" alt="Women Talking plakat"></a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <p><a href="pliki/zaklinaczesloni.html"><i>Zaklinacze Słoni</i></a></p>
+			<p><br>Najlepszy krótkometrażowy film dokumentalny</p>
+			<a href="pliki/zaklinaczesloni.html"><img src="pliki/zaklinaczesloni.jpg" class="img1" alt="Zaklinacze Słoni plakat"></a>
+        </td>
+	</tr>	
+	<tr>
+        <td>
+            <p><a href="pliki/wieloryb.html"><i>Wieloryb</i></a></p>
+			<p><br>Najlepszą charakteryzację i fryzury</p>
+			<a href="pliki/wieloryb.html"><img src="pliki/wieloryb.jpg" class="img1" alt="Wieloryb plakat"></a>
+        </td>
+    </tr>
+</table>
 
-<div><p><a href="pliki/zaklinaczesloni.html">Zaklinacze Słoni</a></p>
-<p><br>Najlepszy krótkometrażowy film dokumentalny</p>
-<img src="pliki/zaklinaczesloni.jpg" alt="Zaklinacze Słoni plakat"></div>
-
-<div><p><a href="pliki/wieloryb.html">Wieloryb</a></p>
-<p><br>Najlepszą charakteryzację i fryzury</p>
-<img src="pliki/wieloryb.jpg" alt="Wieloryb plakat"></div>
-
-<div><p><a href="pliki/nazachodziebezzmian.html">Na zachodzie bez zmian</a></p>
-<p><br>Najlepszą muzykę oryginalną</p>
-<img src="pliki/nazachodziebezzmian.jpg" alt="Na zachodzie bez zmian plakat"></div>
-
-<p> Źródło: <a href="https://www.filmweb.pl/awards/Oscary/2023">Filmweb.pl</a></p>
-
-
+<u><p><b><i><h3><span style="color:red">Źródło informacji: <a href="https://www.filmweb.pl/awards/Oscary/2023">Filmweb.pl</span></h3></i></b></a></p></u>
 
 </body>
 </html>
