--- a/lab1/pliki/zaklinaczesloni.html
+++ b/lab1/pliki/zaklinaczesloni.html
@@ -1,2 +1,24 @@
-<p><a href="../index.html">return</a></p>
-<p></p>
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+<meta http-equiv="Content-Language" content="pl" />
+<meta name="Author" content="Dawid Grabowski" />
+<link rel="stylesheet" href="mystyle.css">
+<title>Filmy Oscarowe</title>
+</head>
+
+<body>
+<ul>
+    <b><li><a href="../index.html">Home</a></li>
+    <li><a class="active" href="kontakt.html">Kontakt</a></li></a></li></b>
+</ul>
+
+<br><h1>Zaklinacze Słoni</h1>
+<h2>OSCAR za Najlepszy krótkometrażowy film dokumentalny</h2>
+<br>
+<div class="obraz"><img class="img2" src="zaklinaczesloni1.jpg" alt="Zaklinacze Słoni - klatka z filmu nr1"></div>
+<h2>opis ze strony tytułowej filmu:</h2>
+<p>Bomman i Bellie z południa Indii poświęcają życie opiece nad osieroconym słoniątkiem o imieniu Raghu, tworząc rodzinę jak żadna inna.</p>
+<div class="clearfix"></div>
+<div class="obraz"><img src="zakliczanesloni2.webp" alt="Zaklinacze Słoni - klatka z filmu nr2"></div>
