--- a/lab1/pliki/kontakt.html
+++ b/lab1/pliki/kontakt.html
@@ -1,2 +1,28 @@
-<p><a href="../index.html">return</a></p>
-<p>tutaj beda dane kontakowe i formularz wysylania maila</p>
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+<meta http-equiv="Content-Language" content="pl" />
+<meta name="Author" content="Dawid Grabowski" />
+<link rel="stylesheet" href="mystyle.css">
+<title>Filmy Oscarowe: Kontakt</title>
+</head>
+
+<body>
+<ul>
+    <b><li><a href="../index.html">Home</a></li>
+    <li><a class="active" href="kontakt.html">Kontakt</a></li></a></li></b>
+</ul>
+
+<br><h1>Kontakt</h1>
+
+<form action="mailto:jakismail@przyklad.pl" method="post" enctype="text/plain">
+	Imie i Nazwisko:
+	<br><input type="text" name="name">
+	<br>E-mail:
+	<br><input type="text" name="mail">
+	<br>Wiadomość:
+	<br><textarea id="message" name="message" rows="4" required></textarea>
+	<br><input type="submit" value="Wyślij">
+	<input type="reset" value="Zresetuj">
+</form>
