--- a/lab1/pliki/wieloryb.html
+++ b/lab1/pliki/wieloryb.html
@@ -23,3 +23,5 @@
 <div class="clearfix"></div>
 <div class="obraz"><img src="wieloryb2.jpg" alt="Wieloryb - klatka z filmu nr2"></div>
 <div class="obraz"><img src="wieloryb3.jpg" alt="Wieloryb - klatka z filmu nr3"></div>
+</body>
+</html>
