--- a/lab1/pliki/wszystkowszedzienaraz.html
+++ b/lab1/pliki/wszystkowszedzienaraz.html
@@ -24,3 +24,5 @@ Dzięki niesamowitym scenom sztuk walki, lekkiemu humorowi w stylu pop oraz przy
 <div class="clearfix"></div>
 <div class="obraz"><img src="wszystkowszedzienaraz2.jpg" alt="Wszystko wszędzie naraz - klatka z filmu nr2"></div>
 <div class="obraz"><img src="wszystkowszedzienaraz3.jpg" alt="Wszystko wszędzie naraz - klatka z filmu nr3"></div>
+</body>
+</html
