--- a/lab1/pliki/zaklinaczesloni.html
+++ b/lab1/pliki/zaklinaczesloni.html
@@ -22,3 +22,5 @@
 <p>Bomman i Bellie z południa Indii poświęcają życie opiece nad osieroconym słoniątkiem o imieniu Raghu, tworząc rodzinę jak żadna inna.</p>
 <div class="clearfix"></div>
 <div class="obraz"><img src="zakliczanesloni2.webp" alt="Zaklinacze Słoni - klatka z filmu nr2"></div>
+</body>
+</html>
