--- a/lab1/pliki/womentalking.html
+++ b/lab1/pliki/womentalking.html
@@ -23,3 +23,5 @@
 <div class="clearfix"></div>
 <div class="obraz"><img src="womentalking2.jpg" alt="Women Talking - klatka z filmu nr2"></div>
 <div class="obraz"><img src="womentalking3.jpg" alt="Women Talking - klatka z filmu nr3"></div>
+</body>
+</html>
