--- a/lab7/html/glowna.html
+++ b/lab7/html/glowna.html
@@ -65,7 +65,7 @@
 	$nr_indeksu = '164372';
 	$nrGrupy = '2';
 	
-	echo 'Autor: Dawid Grabowski '.$nr_indeksu.' grupa '.$nrGrupy.'<br/><br/>';
+	echo 'Autor: Dawid Grab2owski '.$nr_indeksu.' grupa '.$nrGrupy.'<br>';
 ?>
 	
 </body>
